[package]
name = "iroh-dht"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["dht", "content-discovery", "blake3"]
description = "A kademlia DHT with 32-byte keyspace over iroh connections"

[dependencies]
arrayvec = "0.7.6"
blake3 = "1.8.2"
futures-buffered = "0.2.12"
hex = "0.4.3"
indexmap = "2.10.0"
iroh = { path = "../iroh/iroh" }
iroh-base = { path = "../iroh/iroh-base" }
iroh-blobs = { path = "../iroh-blobs", default-features = false }
irpc = "0.13.0"
irpc-iroh = "0.13.0"
n0-future = "0.3.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
snafu = "0.8.6"
textplots = "0.8.7"
tokio = "1.47.1"
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.7.0"
gif = "0.13.3"
plotters = { version = "0.3.7", features = ["bitmap_backend", "bitmap_encoder"] }
testresult = "0.4.1"
tracing-subscriber = "0.3.19"

[patch.crates-io]
noq = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-udp = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-proto = { git = "https://github.com/n0-computer/noq", branch = "main" }
iroh = { path = "../iroh/iroh" }
iroh-base = { path = "../iroh/iroh-base" }

[[bench]]
name = "find_node"
harness = false
